# haskell-nyumon-handson-making

./: .gitignore  README.md
document/handson-day20190202/: exercise.md
memo/: memo-20181103.md
plan/: plan-20181103.md
sample_project/calc-quiz/: .gitignore  ChangeLog.md  README.md  package.yaml
sample_project/calc-quiz/app/: Main.hs
slide/handson-day20181103/: .gitignore  ChangeLog.md  README.md  memo.md  package.yaml
slide/handson-day20181103/app/: handson-day20181103-0.hs  handson-day20181103-1.hs  handson-day20181103-2.hs  handson-day20181103-3.hs  handson-day20181103-4.hs  handson-day20181103-5.hs  handson-day20181103-6.hs  handson-day20181103-7.hs  handson-day20181103-8.hs
slide/handson-day20181103/sample/: buffer.hs  calcPrac.hs  currentTime.hs  do.hs  expression.hs  janken.hs  jump.hs  length.hs  list.hs  maturable.hs  maybe.hs  point.hs  rec.hs  stroheim.hs  sum.hs  yesno.hs
slide/handson-day20190202/: LICENSE  handson-day20190202.cabal  stack.yaml
slide/handson-day20190202/app/: lecture20190202-0.hs  lecture20190202-1.hs  lecture20190202-10.hs  lecture20190202-11.hs  lecture20190202-2.hs  lecture20190202-3.hs  lecture20190202-4.hs  lecture20190202-5.hs  lecture20190202-6.hs  lecture20190202-7.hs  lecture20190202-8.hs  lecture20190202-9.hs
