name:                handson-day20190202
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/YoshikuniJujo/handson-day20190202#readme
license:             BSD3
license-file:        LICENSE
author:              Yoshikuni Jujo
maintainer:          yoshikuni.jujo[AT]snow.plala.or.jp
copyright:           (c) 2017 Yoshikuni Jujo
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lecture20190202-0
  hs-source-dirs:      app
  main-is:             lecture20190202-0.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

executable lecture20190202-1
  hs-source-dirs:      app
  main-is:             lecture20190202-1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

executable lecture20190202-2
  hs-source-dirs:      app
  main-is:             lecture20190202-2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

executable lecture20190202-3
  hs-source-dirs:      app
  main-is:             lecture20190202-3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

executable lecture20190202-4
  hs-source-dirs:      app
  main-is:             lecture20190202-4.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

executable lecture20190202-5
  hs-source-dirs:      app
  main-is:             lecture20190202-5.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

executable lecture20190202-6
  hs-source-dirs:      app
  main-is:             lecture20190202-6.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

executable lecture20190202-7
  hs-source-dirs:      app
  main-is:             lecture20190202-7.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

executable lecture20190202-8
  hs-source-dirs:      app
  main-is:             lecture20190202-8.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

executable lecture20190202-9
  hs-source-dirs:      app
  main-is:             lecture20190202-9.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

executable lecture20190202-10
  hs-source-dirs:      app
  main-is:             lecture20190202-10.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

executable lecture20190202-11
  hs-source-dirs:      app
  main-is:             lecture20190202-11.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide, handson-day20190202
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/YoshikuniJujo/handson-day20190202
